.kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: <CHART_NAME>
spec:
  replicas: 1
  strategy:
    type: Recreate
  progressDeadlineSeconds: 300
  selector:
    matchLabels:
      app: <CHART_NAME>
  template:
    metadata:
      labels:
        app: <CHART_NAME>
    spec:
      imagePullSecrets:
        - name: oxy-image-pull-gitlab
      containers:
        - name: <CHART_NAME>
          image: <IMAGE>

          ports:
            - name: http
              containerPort: 80
