.kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: <CHART_NAME>
spec:
  selector:
    app: <CHART_NAME>
  ports:
    - name: http
      targetPort: http
      port: 80
