.kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <CHART_NAME>
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - secretName: <CHART_NAME>-tls
  rules:
    - host: <HOST_ADDR>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: <CHART_NAME>
                port:
                  name: http
